--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "timeago.js": "^2.0.3",
     "vue": "^2.0.8",
     "vue-date": "^1.1.5",
+    "vue-resource": "^1.2.0",
     "vue-router": "^2.0.3",
     "vuex": "^2.0.0"
   },
