--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,19 @@
 {
-    "presets": ["es2015", "stage-0"],
-    "plugins": ["transform-runtime"]
+    "presets": [
+        "es2015",
+        "stage-0"
+    ],
+    //"plugins": ["transform-runtime"]
+    "plugins": [
+        "transform-runtime",
+        [
+            "component",
+            [
+                {
+                    "libraryName": "mint-ui",
+                    "style": true
+                }
+            ]
+        ]
+    ]
 }
